docs: sync pending OpenJDK book updates